<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="100"
    android:id="@+id/parent"
    android:background="@color/colorBackground">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/title_video_player_item"
        android:background="#000"
        android:scaleType="center"
        android:id="@+id/media_container_video_player_item">

        <ImageView
            android:id="@+id/thumbnail_video_player_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_background"
            android:scaleType="fitXY"
            android:src="@drawable/splashscreen"
            android:contentDescription="@string/thumbnail_layout_video" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_volume_up_grey_24dp"
            android:layout_gravity="end|bottom"
            android:id="@+id/volume_control_video_player_item"
            android:alpha="0"
            android:animateLayoutChanges="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/volume_on_off_layout_video" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar_video_player_item"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            android:layout_gravity="center" />
    </FrameLayout>
    <TextView
        android:id="@+id/title_video_player_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/media_container_video_player_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/this_is_the_title_layout_video"/>

</androidx.constraintlayout.widget.ConstraintLayout>